--- a/src/main/resources/templates/common/master.html
+++ b/src/main/resources/templates/common/master.html
@@ -16,15 +16,15 @@
     
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     
-    <link th:href="@{font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
     
-    <link th:href="@{css/matrialize.css}" rel="stylesheet">
+    <link th:href="@{/css/matrialize.css}" rel="stylesheet">
     
-    <link th:href="@{owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
+    <link th:href="@{/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
     
-    <link rel="stylesheet" type="text/css" th:href="@{css/jquery-ui.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/jquery-ui.min.css}">
     
-    <link rel="stylesheet" th:href="@{css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
     <header class="header" th:fragment="common-header">
