--- a/src/main/resources/templates/post_job.html
+++ b/src/main/resources/templates/post_job.html
@@ -3,7 +3,7 @@
 
 <head th:replace="common/master :: header" />
 
-<body class="background-color-white">
+<body class="background-color-white" ng-app="ngAnimate">
     
     <head th:replace="common/master :: common-header" />
     
@@ -92,7 +92,10 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
                                 <label for="salary">Salary Range:</label>
-                                <div class="d-flex flex-row">
+                                <div>
+                                    <input type="checkbox" ng-model="checked" ng-init="checked=false" />   Negotiable
+                                </div>
+                                <div class="d-flex flex-row animate-if" ng-if="!checked">
                                     <input type="text" class="form-control mr-3" id="minSalary" th:name="minSalary" th:value="${post.minSalary}" placeholder="Min Salary (e.g. $5,000)">
                                     <input type="text" class="form-control" id="maxSalary" th:name="maxSalary" th:value="${post.maxSalary}" placeholder="Max Salary (e.g. $10,000)">
                                 </div>
@@ -186,6 +189,8 @@
     <footer th:replace="common/master :: footer" />
     
     <div th:replace="common/master :: common-script" />
+    <script th:src="@{/js/angular.min.js}"></script>
+    <script th:src="@{/js/angular-animate.js}"></script>
 </body>
 
 </html>
