--- a/src/main/resources/templates/uploaded-post.html
+++ b/src/main/resources/templates/uploaded-post.html
@@ -28,8 +28,13 @@
                         <span class="text" th:text="${post.employeeLimit}"></span> applicant(s)
                         <br />
                         <i class="fa fa-usd text-warning" aria-hidden="true"></i>
-                        $<span class="text font-size" th:text="${post.minSalary}"></span> ~
-                        $<span class="text font-size" th:text="${post.maxSalary}"></span>
+                        <span th:if="${post.minSalary gt 0 and post.maxSalary gt 0}">
+                            $<span class="text font-size" th:text="${post.minSalary}"></span> ~
+                            $<span class="text font-size" th:text="${post.maxSalary}"></span>
+                        </span>
+                        <span th:if="${post.minSalary == null and post.maxSalary == null}">
+                            Negotiable
+                        </span>
                         <div class="float-right margin-top text-align-center">
                             <a th:onclick="'deletePost(\'' + ${post.postId} + '\');'" class="btn btn-danger">Delete</a>
                             <a th:href="@{/updatePost/}+${post.postId}" class="btn btn-info">Update</a>
