Modify Job Post UI

--- a/src/main/resources/templates/common/master.html
+++ b/src/main/resources/templates/common/master.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
     <link rel="stylesheet" th:href="@{/css/animations.css}">
+
+    <link rel="stylesheet" th:href="@{/css/custom-radio-button.css}">
 </head>
 <body>
     <header class="header" th:fragment="common-header">
