--- a/src/main/resources/templates/post_job.html
+++ b/src/main/resources/templates/post_job.html
@@ -40,35 +40,38 @@
                         </div>
                     </div>
                     
-                    <div class="row">
-                        <div class="form-group" id="Job-Nature">
-                            <label>Job Nature</label>
-                            <div class="row">
-                                <div class="col">
-                                    <input type="radio" name="jobType" value="Full Time" th:checked="*{post.jobType=='Full Time'}">Full Time</span>
+                    <div id="Job-Nature">
+                        <label>Job Nature</label>
+                    </div>
+                    <div>
+                        <div class="radio-tile-group">
+                            <div class="input-container">
+                                <input type="radio" name="jobType" class="radio-button" value="Full Time" th:checked="*{post.jobType=='Full Time'}">
+                                <div class="radio-tile">
+                                    <label for="fullTime" class="radio-tile-label">Full Time</label>
                                 </div>
-                                <div class="col">
-                                    <input type="radio" name="jobType" value="Part Time" th:checked="*{post.jobType=='Part Time'}">Part Time</span>
+                            </div>
+                            <div class="input-container">
+                                <input type="radio" name="jobType" class="radio-button" value="Part Time" th:checked="*{post.jobType=='Part Time'}">
+                                <div class="radio-tile">
+                                    <label for="fullTime" class="radio-tile-label">Part Time</label>
                                 </div>
-                                <div class="col">
-                                    <input type="radio" name="jobType" value="Freelancer" th:checked="*{post.jobType=='Freelancer'}">Freelancer</span>
+                            </div>
+                            <div class="input-container">
+                                <input type="radio" name="jobType" class="radio-button" value="Freelancer" th:checked="*{post.jobType=='Freelancer'}">
+                                <div class="radio-tile">
+                                    <label for="fullTime" class="radio-tile-label">Freelancer</label>
                                 </div>
-                                <div class="col">
-                                    <input type="radio" name="jobType" value="Internship" th:checked="*{post.jobType=='Internship'}">Internship</span>
+                            </div>
+                            <div class="input-container">
+                                <input type="radio" name="jobType" class="radio-button" value="Internship" th:checked="*{post.jobType=='Internship'}">
+                                <div class="radio-tile">
+                                    <label for="fullTime" class="radio-tile-label">Internship</label>
                                 </div>
-                                <!-- <div class="col-lg-4 col-md-4">
-                                    <a class="Job-Nature active1">Full Time</a>
-                                </div>
-                                <div class="col-lg-4 col-md-4">
-                                    <a class="Job-Nature">Part Time</a>
-                                </div>
-                                <div class="col-lg-4 col-md-4">
-                                    <a class="Job-Nature">Freelancer</a>
-                                </div> -->
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col-lg-4 col-md-4">
                             <div class="form-group">
                                 <label for="ageLimit">Age Limit</label>
@@ -96,8 +99,8 @@
                                     <input type="checkbox" ng-model="checked" ng-init="checked=false" />   Negotiable
                                 </div>
                                 <div class="d-flex flex-row animate-if" ng-if="!checked">
-                                    <input type="text" class="form-control mr-3" id="minSalary" th:name="minSalary" th:value="${post.minSalary}" placeholder="Min Salary (e.g. $5,000)">
-                                    <input type="text" class="form-control" id="maxSalary" th:name="maxSalary" th:value="${post.maxSalary}" placeholder="Max Salary (e.g. $10,000)">
+                                    <input type="text" class="form-control mr-3" id="minSalary" th:name="minSalary" th:value="${post.minSalary}" placeholder="Min Salary (e.g. $5,000)" required>
+                                    <input type="text" class="form-control" id="maxSalary" th:name="maxSalary" th:value="${post.maxSalary}" placeholder="Max Salary (e.g. $10,000)" required>
                                 </div>
                             </div>
                         </div>
