--- a/src/main/resources/templates/post_job.html
+++ b/src/main/resources/templates/post_job.html
@@ -19,11 +19,19 @@
             <div class="job-post-box">
                 <form th:action="@{/addPost}" method="POST">
                     <input type="hidden" name="postId" th:value="${post.postId}" />
+                    <div class="form-group">
+                        <label for="jobTitle">Job title</label>
+                        <input type="text" class="form-control" id="jobTitle" th:name="jobTitle" th:value="${post.jobTitle}" placeholder="Enter your job title" required />
+                    </div>
                     <div class="row">
                         <div class="col-lg-6 col-md-12">
                             <div class="form-group">
-                                <label for="jobTitle">Job title</label>
-                                <input type="text" class="form-control" id="jobTitle" th:name="jobTitle" th:value="${post.jobTitle}" placeholder="Enter your job title" required />
+                                <label for="jobCategory">Job Category</label>
+                                <select th:name="jobCategory" id="jobCategory" class="form-control" required>
+                                    <option value="" disabled="disabled">Please select an option</option>
+                                    <option th:each="jobCategory : ${jobCategoriesList}" th:text="${jobCategory}"
+                                    th:selected="(${post.jobCategory}==${jobCategory})"></option>
+                                </select>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
