--- a/src/main/resources/templates/common/master.html
+++ b/src/main/resources/templates/common/master.html
@@ -106,6 +106,15 @@
 									<li><a href="blog_page.html"> Blog</a></li>
 									<li><a href="about_us.html">About</a></li>
 									<li><a href="contact.html">Contact</a></li>
+									<li class="dropdown ">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-building fa-2x" aria-hidden="true"></i>
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="job_category.html">Edit Profile</a></li>
+                                            <li><a th:href="@{/viewPosts}">View Uploaded Posts</a></li>
+                                        </ul>
+                                    </li>
 								</ul>
 								<div class=" Post-Jobs">
 									<a th:href="@{/postJob}" class=""> Post Jobs </a>
