--- a/src/main/resources/templates/job_apply.html
+++ b/src/main/resources/templates/job_apply.html
@@ -103,9 +103,9 @@ $('#applyJob').on('submit',function(event){
 function success(){
 	$('#submit-btn').show();
 	$('#loader').hide();
-    swal("Good Luck!", "Email successfully Sent!", "success")., function(){
+    swal("Good Luck!", "Email successfully Sent!", "success"), function(){
         window.location.href = "/viewPosts";
-    });
+    };
 }	
 
 
