--- a/src/main/resources/templates/post_job.html
+++ b/src/main/resources/templates/post_job.html
@@ -104,7 +104,7 @@
                             <div class="form-group">
                                 <label for="salary">Salary Range:</label>
                                 <div>
-                                    <input type="checkbox" ng-model="checked" ng-init="checked=false" />   Negotiable
+                                    <input type="checkbox" ng-model="checked" th:attr="ng-init='checked='+${post.minSalary == null and post.maxSalary == null}" />   Negotiable
                                 </div>
                                 <div class="d-flex flex-row animate-if" ng-if="!checked">
                                     <input type="text" class="form-control mr-3" id="minSalary" th:name="minSalary" th:value="${post.minSalary}" placeholder="Min Salary (e.g. $5,000)" required>
