--- a/src/main/resources/templates/uploaded-post.html
+++ b/src/main/resources/templates/uploaded-post.html
@@ -4,7 +4,7 @@
 <head th:replace="common/master :: header" />
 
 
-<body class="background-color-white" >
+<body>
 
     
     <header th:replace="common/master :: common-header" />
