--- a/src/main/resources/templates/common/master.html
+++ b/src/main/resources/templates/common/master.html
@@ -113,6 +113,16 @@
                                             <li><a th:href="@{/viewPosts}">View Uploaded Posts</a></li>
                                         </ul>
                                     </li>
+									<li class="dropdown ">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-user fa-2x" aria-hidden="true"></i>
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a th:href="@{/signup}">Sign Up</a></li>
+                                            <li><a th:href="@{/login}">LogIn</a></li>
+                                            <li><a th:href="@{/companyAccount}">MyAccount</a></li>
+                                        </ul>
+                                    </li>
 								</ul>
 								<div class=" Post-Jobs">
 									<a th:href="@{/postJob}" class=""> Post Jobs </a>
