User Role Dividing EndUser and Company

--- a/src/main/resources/templates/apply_job_email_format.html
+++ b/src/main/resources/templates/apply_job_email_format.html
@@ -28,8 +28,9 @@
 				<address>
 					<strong><span th:text="${userName}"></span></strong><br>
 					 <a href="mailto:#"><span th:text="${userEmail}"></span></a><br>
-					<abbr title="Phone">Phone:</abbr> (123) 456-7890<br> 1355
-					Market Street, Suite 900<br> San Francisco, CA 94103<br>
+					<abbr title="Phone">Phone:</abbr><span th:text="${userPhone}"></span><br>
+					 <span th:text="${userAddress}"></span>
+					<br>
 				</address>
 
 			</div>
