--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="eng" xmlns:th="http://www.w3.org/1000/xhtml">
+<html lang="eng" xmlns:th="http://www.w3.org/1000/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+
 
 <head th:replace="common/master :: header" />
 
@@ -49,81 +50,23 @@
             </p>
             <div class="vertical-space-60"> </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 max-width-50">
-                    <div class="box background-color-white-light">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-1.png" alt="">
-                        </div>
-                        <h6>Education & Training</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>36 Job Posts</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 max-width-50">
-                    <div class="box background-color-white-light">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-2.png" alt="">
-                        </div>
-                        <h6>Sales and Marketing</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>72 Job Posts</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 max-width-50">
-                    <div class="box background-color-white-light">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-3.png" alt="">
-                        </div>
-                        <h6>Computer Programing</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>42 Job Posts</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 max-width-50">
-                    <div class="box background-color-white-light">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-4.png" alt="">
-                        </div>
-                        <h6>Customer Support</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>18 Job Posts</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 max-width-50">
-                    <div class="box background-color-white-light">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-5.png" alt="">
-                        </div>
-                        <h6>Design & Multimedia</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>48 Job Posts</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 max-width-50">
-                    <div class="box background-color-white-light">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-6.png" alt="">
-                        </div>
-                        <h6>Web Development</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>94 Job Posts</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 max-width-50 margin-left-18">
-                    <div class="box background-color-white-light">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-7.png" alt="">
-                        </div>
-                        <h6>Medical/Pharma</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>64 Job Posts</span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 max-width-50">
-                    <div class="box background-color-white-light ">
-                        <div class="circle">
-                            <img src="imags/icone/service-icone-8.png" alt="">
-                        </div>
-                        <h6>Engineer/Architects</h6>
-                        <a href="#" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span>52 Job Posts</span></a>
-                    </div>
-                </div>
-            </div>
+           
+            
+	                <div class="col-lg-3 col-md-6 max-width-50" th:each="post : ${mostAppliedJobLists}">
+	                    <div class="box background-color-white-light">
+	                        <div class="circle">
+	                            <img src="imags/icone/service-icone-1.png" alt="">
+	                        </div>
+	                        <h6 th:text="${post.key}"></h6>
+	                         <a th:href="@{/getPostsByCategory/}+${post.key}" class="button job_post" data-hover="View Jobs" data-active="I'M ACTIVE"><span th:text="${post.value}"></span></a>
+
+	                    </div>
+	                </div>
+	                
+	  
             <div class="vertical-space-40"></div>
-            <a href="#" class="Brows-All-Category">Brows All Category</a>
+            <a th:href="@{/getPostCountByCategory}" class="Brows-All-Category">Browse All Category</a>
+        </div>
         </div>
         <div class="vertical-space-85"></div>
     </section>
