--- a/src/main/resources/templates/job_apply.html
+++ b/src/main/resources/templates/job_apply.html
@@ -20,7 +20,7 @@
 		
 		<!-- style="background-image: url('https://mdbootstrap.com/img/Photos/new-templates/glassmorphism-article/img5.jpg');" -->
 			<div class="card">
-				<div class="card-header" style="background-color: #F26522;color: white;text-align:center;">
+				<div class="card-header text-white text-center" style="background-color: #F26522;color: white;padding: 30px;">
 					<p>Apply Job</p>
 				</div>
 				<div class="card-body">
@@ -103,9 +103,7 @@ $('#applyJob').on('submit',function(event){
 function success(){
 	$('#submit-btn').show();
 	$('#loader').hide();
-    swal("Good Luck!", "Email successfully Sent!", "success"), function(){
-        window.location.href = "/viewPosts";
-    };
+    swal("Good Luck!", "Email successfully Sent!", "success");
 }	
 
 
