--- a/src/main/resources/templates/uploaded-post.html
+++ b/src/main/resources/templates/uploaded-post.html
@@ -4,7 +4,7 @@
 <head th:replace="common/master :: header" />
 
 
-<body class="background-color-white" >
+<body class="background-color-white" th:onload="${emailSent}? 'success()'" >
 
 
 	<header th:replace="common/master :: common-header" />
@@ -17,7 +17,7 @@
         <div class="wrapper">
         <!-- Sidebar  -->
         <nav id="sidebar">
-            <div class="sidebar-header" style="background-color: #1C7E9E">
+            <div class="sidebar-header" style="background-color: #F26522;color: white;">
                 <h3>Filter Job</h3>
             </div>
               <div class="container" style="padding: 30px">
@@ -103,7 +103,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-info" style="background-color: #1C7E9E">
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
                         <i class="fa fa-align-left"></i>
                         <span>Filter Jobs</span>
                     </button>
@@ -121,7 +121,7 @@
 											<option value="60">2 Months ago</option>
 										</select>
 								</div>
-								<button class="btn btn-primary my-2 my-sm-0" type="submit" style="background-color: #1C7E9E">Search</button>
+								<button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
 							</form>
                 </div>
             </nav>
