--- a/src/main/resources/templates/user_register.html
+++ b/src/main/resources/templates/user_register.html
@@ -83,7 +83,7 @@
 							<p>Register here</p>
 						</div>
 						<div class="card-body">
-							<form th:action="@{/newUser}" method="POST" class="form-group">
+							<form th:action="@{/newUser}" method="POST" class="form-group" id="userRegisterForm">
 								<div class="form-group">
 									<label for="username">User Name</label><br><br> <input
 										type="text" class="form-control" id="username" name="username"
@@ -104,11 +104,13 @@
 									<input type="radio" id="selectRole" name="selectRole" value="Company" > Company
 								</div>
 								
-								<div class="container text-center" id="loader" style="display: none;">
-							       <span class="fa fa-refresh fa-spin fa-2x"></span>
-							       <h4>Please wait...</h4>
+								<div style="float:right">
+									<button class="btn btn-primary" type="button" disabled id="loader" style="display: none;background-color: #F26522">
+										<span class="spinner-border spinner-border-sm" role="status"
+											aria-hidden="true"></span> Sending Email
+									</button>
+									<button type="submit" class="btn btn-primary" id="submit-btn" style="background-color: #F26522">Register</button>
 								</div>
-								<button id="submit-btn" type="submit" class="btn btn-primary">Submit</button>
 							</form>
 						</div>
 					</div>
@@ -126,6 +128,13 @@
 <head th:replace="common/master :: common-script" />
 
 <script type="text/javascript">
+$('#userRegisterForm').on('submit',function(event){
+	
+	$('#submit-btn').hide();
+	$('#loader').show();
+	
+}); 
+
 function success(){
 	$('#submit-btn').show();
 	$('#loader').hide();
