--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -152,8 +152,8 @@ Post Jobs
 <div class="carousel-container">
 <div class="carousel-content text-left">
 <div class="container">
-<h2 class="font-color-white">About Jobtend</h2>
-<p class="font-color-white margin">Lovistiq pue velit phasellus sed auctor leo eros luctus nibh fermentum, ad imperdiet rhoncus dolorhabitant purus velit aliquet dolorhabitant purus velit aliquet donecurna ut in turpis donecurna ut in turpis</p>
+<h2 class="font-color-white">About Recruiter</h2>
+<p class="font-color-white margin">We'll help you find the great opportunities throughout the world.</p>
 <a class="Explore-Jobs">Explore Jobs</a>
 </div>
 </div>
@@ -170,7 +170,7 @@ Post Jobs
 <div class="col-lg-6 col-md-12">
 <h3 class="title">Best Place to Find Jobs</h3>
 <div class="vertical-space-20"></div>
-<p>The honcs fusce aliqm non dictmst dapib alorem accman pellenl tesque in temor ultrices etiams fusce aliqm non dictmst dapib alorem</p>
+<p>Visit and Join our Recruiter to find the Best Opportunities in the world.</p>
 <div class="vertical-space-30"></div>
 <div class="Title-text-here-one-box">
 <div class="media">
@@ -179,7 +179,7 @@ Post Jobs
 </div>
 <div class="media-body">
 <h6>Mobile friendly</h6>
-<p>The honcs fusce aliqm non dictmst dapib alorem accman pellenl tesque in temor</p>
+<p>Can be easily used in Mobile Platform</p>
 </div>
 </div>
 </div>
@@ -190,8 +190,8 @@ Post Jobs
 <img src="imags/Best-Place-to-Find-Jobs-icone2.png" alt="" class="">
 </div>
 <div class="media-body">
-<h6>Cookie cotton candy</h6>
-<p>The honcs fusce aliqm non dictmst dapib alorem accman pellenl tesque in temor</p>
+<h6>User friendly</h6>
+<p>Explore and Search the Information easily on this website</p>
 </div>
 </div>
 </div>
@@ -209,17 +209,15 @@ Post Jobs
 <div class="vertical-space-100"></div>
 <div class="row">
 <div class="col-lg-9 col-md-12 ">
-<h3 class="title-jobted title font-color-white">Why Choose Jobtend</h3>
+<h3 class="title-jobted title font-color-white">Why Choose Recruiter</h3>
 <div class="vertical-space-20"></div>
-<p class="max-width font-color-white">Tristique velit phasellus sed auctor leo eros luctus nibh fermentum, ad imperdiet rhoncus dolorhabitant purus velit aliquet donecurna ut in turpis
-</p>
+<p class="max-width font-color-white">Our Goal is to help you to find the best opportunities throughout the Best Company in the world.</p>
 <div class="vertical-space-40"></div>
 <ul class="max-width font-color-white">
-<li class="list-item1 ">Tristique velit phasellus sed auctor leo eros luctus nibh fermentum, ad imperdiet rhoncus dolorhabitant purus velit aliquet donecurna ut in turpis
-</li>
-<li class="list-item1 ">Rivastic stique velit phasellus sed auctor leo eros luctus nibh fermentum, ad imperdiet rhoncus dolorhabitant purus </li>
-<li class="list-item1 ">Lovistiq pue velit phasellus sed auctor leo eros luctus nibh fermentum, ad imperdiet rhoncus dolorhabitant purus velit aliquet dolorhabitant purus velit aliquet donecurna ut in turpis donecurna ut in turpis</li>
-<li class="list-item1 ">Tristique velit phasellus sed auctor leo eros luctus nibh fermentum, ad imperdiet rhoncus dolorhabitant purus velit aliquet donecurna ut in turpis</li>
+<li class="list-item1 ">Find the Right Job!</li>
+<li class="list-item1 ">Boost Your Career</li>
+<li class="list-item1 ">Be the Best Candidate</li>
+
 </ul>
 </div>
 <div class="col-lg-3 col-md-12 align-self-center">
@@ -239,8 +237,7 @@ Post Jobs
 <div class="vertical-space-100"></div>
 <h3 class="text-center">Meet With Our Team</h3>
 <div class="vertical-space-30"></div>
-<p class="max-width">Lorem ipsum tempus amet conubia adipiscing fermentum viverra gravida, mollis suspendisse pretium dictumst inceptos mattis euismod
-</p>
+<p class="max-width">Students of UIT(University of Information Technology) developed together.</p>
 <div class="vertical-space-60"></div>
 <div class="row">
 <div class="col-lg-3 col-md-6">
@@ -387,7 +384,7 @@ Post Jobs
 <div class="row">
 <div class="col-lg-4 col-md-6 vertical-space-2">
 <h5>About Us</h5>
-<p class="paregraf">Tristique velit phasellus sed auctor leo eros luctus nibh fermentu ad impediet rhonus dolor habitant purus velit aliquet donecurna ut in turpis faucibus</p>
+<p class="paregraf">Students of UIT(University of Information Technology) developed together.</p>
 <a href="#">
 <i class="fa fa-facebook social-icon facebook"></i></a>
 <a href="#">
