--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <div class="carousel-container">
                 <div class="carousel-content">
                     <h2 class="font-color-white">Find Jobs Now more Easy Way</h2>
-                    <p class="font-color-white">Lorem ipsum tempus amet conubia adipiscing fermentum viverra gravida, mollis suspendisse pretium dictumst inceptos mattis euismod lorem nulla, magna duis nostra sodales luctus nulla praesent fermentum a elit mollis purus aenean curabitur eleifend </p>
+                    <p class="font-color-white">To a Brighter Future, Better Opportunities, Join With Us on Recruiter</p>
                     <a href="#" data-toggle="modal" data-target="#myModal"><i class=" material-icons play">play_arrow</i></a>
                 </div>
             </div>
@@ -46,8 +46,7 @@
         <div class="container">
             <h3 class="text-center">Choose Job Category</h3>
             <div class="vertical-space-30"></div>
-            <p class="max-width">Lorem ipsum tempus amet conubia adipiscing fermentum viverra gravida, mollis suspendisse pretium dictumst inceptos mattis euismod
-            </p>
+            <p class="max-width">Administrative, Architecture, Design, Education, Teaching, IT Hardware, Software, HR, Management, Medical, Supply Chain, Research and Development, Translation, Others</p>
             <div class="vertical-space-60"> </div>
             <div class="row">
            
@@ -77,7 +76,7 @@
         <div class="container text-center">
             <h3 class="text-center">Recent Job Post</h3>
             <div class="vertical-space-30"></div>
-            <p class="max-width">Lorem ipsum tempus amet conubia adipiscing fermentum viverra gravida, mollis suspendisse pretium dictumst inceptos mattis euismod
+            <p class="max-width">Explore Job Posts on Our Jobs Page.
             </p>
             <div class="vertical-space-60"></div>
             <div th:replace="common/master :: jobPost" />
@@ -103,9 +102,9 @@
     <section id="Featuread-Company">
         <div class="vertical-space-85"></div>
         <div class="container text-center">
-            <h3 class="text-center">Featuread Company</h3>
+            <h3 class="text-center">Featured Company</h3>
             <div class="vertical-space-30"></div>
-            <p class="max-width">Lorem ipsum tempus amet conubia adipiscing fermentum viverra gravida, mollis suspendisse pretium dictumst inceptos mattis euismod
+            <p class="max-width">These are the Featured Companies on the Recruiter.
             </p>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12">
@@ -299,19 +298,18 @@
             <div class="vertical-space-85"></div>
             <div class="row">
                 <div class="col-lg-9 col-md-6  align-self-center">
-                    <h3 class="title">Jobtend - Best Place to Find Jobs & Employee</h3>
+                    <h3 class="title">Recruiter - Best Place to Find Jobs & Employee</h3>
                     <div class="vertical-space-30"></div>
-                    <p class="max-width">Lorem ipsum tempus amet conubia adipiscing fermentum viverra gravida, mollis suspendisse pretium dictumst inceptos mattis euismod lorem nulla magna duis nostra sodales luctus nulla
-                    </p>
+                    <p class="max-width">Connecting you with Top Employers </p>
                     <div class="vertical-space-30"></div>
                     <h4>Why we are best</h4>
                     <div class="vertical-space-30"></div>
                     <ul>
-                        <li class="list-item1 ">Et vestibulum ullamcorper curae tellus consectetur erat pharetra et cubilia
-                            <br /> Nibh est auctor lacus nam lacinia aptent
+                        <li class="list-item1 ">Find the Right Job
+                            <br /> Search or get recommendations for jobs that match what you're looking for.
                         </li>
-                        <li class="list-item1 ">Vitae sociosqu a nisi cubilia vulputate aliquam vulputate imperdiet tempor arcu fames</li>
-                        <li class="list-item1 ">Odio habitasse senectus morbi dapibus mauris non primis, nisl ante hendrerit consectetur nulla phasellus eleifend, ad at scelerisque vulputate habitant tempor</li>
+                        <li class="list-item1 ">Create a profile, get it to a 100% and immediately get noticed by the right recruiters.</li>
+                        
                     </ul>
                     <div class="vertical-space-30"></div>
                     <a href="#" class="Explore-Employee">Explore Employee</a>
@@ -329,52 +327,80 @@
     <section id="Clients-Testimonial">
         <div class="vertical-space-85"></div>
         <div class="container">
-            <h3 class="text-center">Recent Job Post</h3>
+            <h3 class="text-center">Our Members</h3>
             <div class="vertical-space-30"></div>
-            <p class="max-width">Lorem ipsum tempus amet conubia adipiscing fermentum viverra gravida, mollis suspendisse pretium dictumst inceptos mattis euismod
+            <p class="max-width">
             </p>
             <div class="vertical-space-60"></div>
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="owl-carousel Clients-Testimonial-carousel">
                     <div class="Clients-Testimonial-item">
                         <div class="testimonial">
-                            <h3 class="testimonial-title">Farhana Islam</h3>
+                            <h3 class="testimonial-title">Khin Me Me Latt</h3>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vehicula turpis non est imperdiet, et facilisis nisl tempus. Donec nec. </p>
+                            <p class="description">POST (Create, Read, Update & Delete Operations)</p>
                             <div class="pic">
-                                <img src="imags/Clients-Testimonial1.jpg" alt="">
+                                <img src="imags/KMM.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="Clients-Testimonial-item">
                         <div class="testimonial">
-                            <h3 class="testimonial-title">Williamson</h3>
+                            <h3 class="testimonial-title">Kyaw Kyaw Khaing</h3>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vehicula turpis non est imperdiet, et facilisis nisl tempus. Donec nec. </p>
+                            <p class="description">Job Apply, Approve Job, Reply(By Email, by Website), Search(Category, title, Location, Country, Money)</p>
                             <div class="pic">
-                                <img src="imags/Clients-Testimonial3.jpg" alt="">
+                                <img src="imags/kkk.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="Clients-Testimonial-item">
                         <div class="testimonial">
-                            <h3 class="testimonial-title">Williamson</h3>
+                            <h3 class="testimonial-title">Shwe Yee Thet Htar</h3>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
                             <i class="material-icons star">star</i>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vehicula turpis non est imperdiet, et facilisis nisl tempus. Donec nec. </p>
+                            <p class="description">Admin - Approve Post, Delete Post, AccountControll(Delete), Monitoring UI</p>
                             <div class="pic"> 
-                                <img src="imags/Clients-Testimonial2.jpg" alt="">
+                                <img src="imags/shweyth.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="Clients-Testimonial-item">
+                        <div class="testimonial">
+                            <h3 class="testimonial-title">Thiri Yadanar Aung</h3>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <p class="description">Company Information (Create, Update, Payment)</p>
+                            <div class="pic">
+                                <img src="imags/thiri.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="Clients-Testimonial-item">
+                        <div class="testimonial">
+                            <h3 class="testimonial-title">Thaw Myo Htet</h3>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <i class="material-icons star">star</i>
+                            <p class="description">User Information (Create, Update)</p>
+                            <div class="pic">
+                                <img src="imags/tmh.png" alt="">
                             </div>
                         </div>
                     </div>
